Update render.yaml comment to trigger fresh validation on Render.com

--- a/render.yaml
+++ b/render.yaml
@@ -1,5 +1,5 @@
 services:
-  # PostgreSQL baza podatkov
+  # PostgreSQL baza podatkov - Render.com deployment
   - type: pserv
     name: profesorji-db
     env: postgresql
